refactor: change collapse butoon, added themes for button

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -1,4 +1,7 @@
 {
-  "Language": "English",
-  "Not Found Page": "Not Found Page"
+  "Not Found Page": "Not Found Page",
+  "Main": "Main Page",
+  "About": "About",
+  "en": "En",
+  "language": "English"
 }
