--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -1,4 +1,7 @@
 {
-  "Language": "Русский",
-  "Not Found Page": "Страница не найдена"
+  "Not Found Page": "Страница не найдена",
+  "Main": "Главная",
+  "About": "О сайте",
+  "en": "Ру",
+  "language": "Руусский"
 }
