refactor: added modal into portal

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -3,5 +3,7 @@
   "Main": "Main Page",
   "About": "About",
   "en": "En",
-  "language": "English"
+  "language": "English",
+  "log-in": "Log In",
+  "test": "Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus, magni iusto, deserunt doloremque, consectetur perspiciatis minima est ex harum quod at maiores nobis ea alias voluptatum necessitatibus error nesciunt et quibusdam corrupti! Repellat velit natus laudantium distinctio dicta, quidem saepe accusamus temporibus voluptas fugit quisquam placeat, magnam soluta error recusandae, iure modi eveniet enim quibusdam neque? Ab harum consequuntur beatae inventore ullam veniam voluptatibus et aut natus, at iure quia maiores. Nobis, earum saepe. Ad aliquid eos enim, rem itaque sit ipsum facere et unde excepturi quibusdam iste ea saepe labore, dolore magni maxime reprehenderit voluptate sunt magnam necessitatibus quia?"
 }
