--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -3,5 +3,7 @@
   "Main": "Главная",
   "About": "О сайте",
   "en": "Ру",
-  "language": "Руусский"
+  "language": "Русский",
+  "log-in": "Авторизоваться",
+  "test": "Lorem Ipsum Dolor Sit Amet Cescettur Adipisication Elit. \nValuptatibus, Magni iusto, Deserunt Doloremque, Consectetur perspiatis mimife est ex harum quod at maiores nobis eal alias valuptatum требует ошибки nesciunt et quibusdam corrupti! \nРепеллат Velit natus laudantium disfulio dicta, Quidem Saepe Accusamus timebus voluptas fugit Quisquam Paceat, Magnam Soluta recusandae, Iure modi wersiet enim quibusdam neque? \nAb harum seveldurntur beatae venustore ullam venuptatibus et aut natus, в Quia maiores. \nНОБИС, EARUM SAEPE. \nAdliquid eos enim, rem itaque sit ipsum fare et onde, кроме Quibusdam ise ea saepe labore, долор магни Максим, предотвращающий Valuptate sunt magnam uectiTibus Quia?"
 }
